--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "express-validator": "^2.20.4",
     "rethinkdb": "^2.3.1"
   }
 }
